# test_task_boot

./: .gitignore  README.md  bot.py  pyproject.toml  screenshot.py  settings.py
